--- a/css/main.css
+++ b/css/main.css
@@ -383,7 +383,7 @@ img {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  background: var(--color-white);
+  background: #ffffff;
 }
 
 .team__img {
@@ -399,7 +399,7 @@ img {
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--secondary-title-text);
+  color: #212121;
 }
 
 .team__subtxt {
@@ -408,7 +408,7 @@ img {
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
-  color: var(--primary-text-color);
+  color: #757575;
 }
 
 .team-social__list {
@@ -435,14 +435,14 @@ img {
   height: 44px;
   border-radius: 50%;
   background-position: center;
-  color: var(--social-link-color);
+  color: #AFB1B8;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:hover, .social-link:focus {
-  color: var(--color-white);
-  background-color: var(--accent-color);
-  outline: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196F3;
+  outline: #2196F3;
 }
 
 .firms__list {
