--- a/sass/base/_base-classes.scss
+++ b/sass/base/_base-classes.scss
@@ -11,12 +11,29 @@
     margin: -1px;
 }
 
+.header__link--current {
+    color: $accent-color;
+}
+
+.header__link--current::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+
+    border-radius: 2px;
+
+    background-color: $accent-color;
+}
+
 body {
     margin: 0;
 
-    color: var(--primary-text-color);
+    color: $primary-text-color;
     font-family: 'Roboto', sans-serif;
-    background-color: var(--color-white);
+    background-color: $color-white;
 }
 
 .container {
@@ -40,7 +57,7 @@ body {
     text-align: center;
     letter-spacing: 0.03em;
 
-    color: var(--secondary-title-text);
+    color: $secondary-title-text;
 }
 
 .list {
