--- a/sass/components/_firms.scss
+++ b/sass/components/_firms.scss
@@ -6,7 +6,7 @@
 }
 
 .firms__item {
-    border: 1px solid var(--social-link-color);
+    border: 1px solid $social-link-color;
     border-radius: 4px;
   
     width: 170px;
@@ -16,10 +16,10 @@
 
     &:hover,
     &:focus {
-        border-color: var(--accent-color);
+        border-color: $accent-color;
         cursor: pointer;
-        color: var(--accent-color);
-        outline: var(--accent-color);
+        color: $accent-color;
+        outline: $accent-color;
     }
 }
 
@@ -30,23 +30,23 @@
 
     width: 100%;
     height: 100%;
-    color: var(--social-link-color);
+    color: $social-link-color;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
-        border-color: var(--accent-color);
+        border-color: $accent-color;
         cursor: pointer;
-        color: var(--accent-color);
-        outline: var(--accent-color);
+        color: $accent-color;
+        outline: $accent-color;
     }
 
     .firms__item:hover & 
     .firms__item:focus & {
-        border-color: var(--accent-color);
+        border-color: $accent-color;
         cursor: pointer;
-        color: var(--accent-color);
-        outline: var(--accent-color);
+        color: $accent-color;
+        outline: $accent-color;
     }
 }
