--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,20 +4,26 @@
     padding-top: 60px;
     
     background: #2F303A;
+
+    &__wrapper {
+        display: flex;
+        align-items: baseline;
+    }
+
+    &__list {
+        font-style: normal;
+        font-size: 14px;
+        line-height: 1.5;
+        letter-spacing: 0.03em;
+    }
 }
 
 .footer__logo {
-    display: inline-block;
+    @extend %logo;
 
     margin: 0;
     margin-right: 94px;
     margin-bottom: 20px;
-
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
 
     color: $color-white;
 }
@@ -51,4 +57,105 @@
 
 .footer__item:not(:last-child) {
     margin-bottom: 9px;
+}
+
+// Join section
+
+.join-footer__social {
+    display: inline-flex;
+    gap: 10px;
+}
+
+.join-footer {
+    display: flex;
+    flex-direction: column;
+    margin-left:  70px;
+}
+
+.join-footer__title,
+.mail-wrapper__title {
+    margin-bottom: 10px;
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: $color-white;
+}
+
+.join-footer__link {
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    color: $color-white;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+// Mail section
+
+.mail-wrapper {
+    display: flex;
+    margin-left: auto;
+
+    &__footer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__input {
+        width: 358px;
+        padding: 15px 16px;
+    
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+    
+        background: #2F303A;
+        color: $color-white;
+    }
+}
+
+.mail-wrapper__btn {
+    align-self: end;
+    font-weight: 700;
+    line-height: 1.875;
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    padding: 10px 28px;
+    margin-left: 12px;
+
+    color: $color-white;
+
+    background: $accent-color;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
+    &::after {
+        content: '';
+        display: inline-block;
+    
+        margin-left: 10px;
+        
+        width: 24px;
+        height: 24px;
+    
+        background-image: url('../img/svg/telegrammform.svg');
+    }
+
+    &:hover,
+    &:focus {
+        background-color: #188CE8;
+        cursor: pointer;
+        outline: $accent-color;
+    }
 }
