--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -11,14 +11,5 @@
 
 .header__logo,
 .footer__logo {
-    display: inline-block;
-    margin-right: 94px;
-
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-
-    color: #000000;
+    @extend %logo;
 }
