--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -14,6 +14,8 @@
     }
 
 }
+
+
 .header__nav {
     display: flex;
     align-items: center;
@@ -53,6 +55,10 @@
         color: $accent-color;
         outline: $accent-color;
     }
+}
+
+.header__link--current {
+    color: $accent-color;
 }
 
 /* Телефон имейл */
