--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import './utils/variables';
+@import './utils/placeholders';
 @import './base/base-classes';
 @import './components/logo';
 @import './components/address';
@@ -9,3 +10,5 @@
 @import './components/team';
 @import './components/firms';
 @import './components/footer';
+@import './components/backdrop';
+@import './components/modal';
