--- a/sass/base/_base-classes.scss
+++ b/sass/base/_base-classes.scss
@@ -60,6 +60,14 @@ body {
     color: $secondary-title-text;
 }
 
+.input {
+    padding: 10px 0;
+    padding-left: 35px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px; 
+    width: 100%;
+}
+
 .list {
     padding: 0;
     margin: 0;
