--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,14 +1,5 @@
 @import './utils/variables';
 @import './utils/placeholders';
 @import './base/base-classes';
-@import './components/logo';
-@import './components/address';
-@import './components/page-header';
-@import './components/hero';
-@import './components/section-made';
-@import './components/significant';
-@import './components/team';
-@import './components/firms';
-@import './components/footer';
-@import './components/backdrop';
-@import './components/modal';
+@import './components/index/index';
+@import './components/portfolio/portfolio';
