--- a/sass/components/index/_backdrop.scss
+++ b/sass/components/index/_backdrop.scss
@@ -13,6 +13,8 @@
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+    overflow-y: scroll;
+
     &__title {
         font-weight: 700;
         font-size: 20px;
