--- a/sass/components/index/_footer.scss
+++ b/sass/components/index/_footer.scss
@@ -6,7 +6,7 @@
     background: #2F303A;
 
     &__wrapper {
-        display: flex;
+        // display: flex;
         align-items: baseline;
     }
 
@@ -96,7 +96,7 @@
 // Mail section
 
 .mail-wrapper {
-    display: flex;
+    // display: flex;
     margin-left: auto;
 
     &__footer {
