--- a/css/main.css
+++ b/css/main.css
@@ -29,17 +29,6 @@
   color: #2196F3;
 }
 
-.header__link--current::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196F3;
-}
-
 body {
   margin: 0;
   color: #757575;
@@ -48,10 +37,24 @@ body {
 }
 
 .container {
-  width: 1200px;
-  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 480px) {
+  .container {
+    margin-left: auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
 }
 
 .section {
@@ -89,6 +92,7 @@ body {
 
 .link {
   text-decoration: none;
+  color: #212121;
 }
 
 .icon {
@@ -142,21 +146,29 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: auto;
-  padding-top: 32px;
-  padding-bottom: 32px;
+  -ms-flex-wrap: wrap-reverse;
+      flex-wrap: wrap-reverse;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: column-reverse;
+          flex-direction: column-reverse;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 34px;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.adress__icon {
-  margin-right: 10px;
-  vertical-align: middle;
-  fill: currentColor;
+@media screen and (max-width: 768px) {
+  .adress__nav {
+    color: #2196F3;
+  }
+  .adress__nav .adress__icon-post {
+    display: none;
+  }
+  .adress__nav .adress__icon-phone {
+    display: none;
+  }
 }
 
 .adress__icon-post {
@@ -169,8 +181,18 @@ img {
   height: 16px;
 }
 
-.adress__item:not(:first-child) {
-  margin-left: 50px;
+.adress__item a[href^=tel] {
+  display: inline-block;
+  color: #2196F3;
+  margin-bottom: 32px;
+}
+.adress__item a[href^=mail] {
+  display: inline-block;
+  margin-bottom: 64px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
 }
 
 .adress__link {
@@ -185,33 +207,112 @@ img {
 .adress__link--current {
   color: #2196F3;
 }
-.adress__link--current::after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196F3;
-}
 
 .header {
   position: fixed;
   width: 100%;
+  height: 60px;
   top: 0;
   left: 0;
   z-index: 2;
-  background-color: #ffffff;
-  border-bottom: 1px solid #ECECEC;
-}
-.header__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-color: #ffffff;
+  border-bottom: 1px solid #ECECEC;
+}
+.header__wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100vw;
+  padding: 40px 48px 48px;
+  background-color: #fff;
+}
+@media screen and (max-width: 480px) {
+  .header__wrapper {
+    margin-left: auto;
+  }
+}
+
+.header__mobile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.mobile-btn {
+  z-index: 3;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  margin: 0;
+  background-color: transparent;
+  border: none;
+}
+.mobile-btn .icon-close {
+  display: none;
+}
+.mobile-btn.is-open .icon-close {
+  display: block;
+}
+.mobile-btn.is-open .icon-menu {
+  display: none;
+}
+.mobile-btn.is-open .header__logo {
+  display: none;
+}
+
+.header-social__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #2196F3;
+}
+.header-social__list .header-social__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+}
+.header-social__list .header-social__item:not(:last-child) {
+  margin-right: 20px;
+}
+.header-social__list .header-social__item:not(:last-child):after {
+  content: "";
+  position: absolute;
+  margin-left: 10px;
+  width: 20px;
+  height: 12px;
+  border-bottom: 1px solid rgba(33, 33, 33, 0.2);
+  -webkit-transform: rotate(90deg);
+          transform: rotate(90deg);
+}
+
+.header-social-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: #2196F3;
 }
 
 .header__nav {
@@ -221,15 +322,19 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  gap: 30px;
+  margin-bottom: 302px;
 }
 
 .header__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 32px;
 }
 
 .header__item {
@@ -241,13 +346,10 @@ img {
 }
 
 .header__link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: #212121;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 40px;
+  line-height: 1.175;
+  text-align: start;
   letter-spacing: 0.02em;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -256,7 +358,6 @@ img {
   color: #2196F3;
   outline: #2196F3;
 }
-
 .header__link--current {
   color: #2196F3;
 }
@@ -320,9 +421,6 @@ img {
 }
 
 .made__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   gap: 30px;
 }
 
@@ -355,13 +453,6 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-}
-
-.significant {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
 }
 
 .significant__thumb {
@@ -404,9 +495,6 @@ img {
 }
 
 .team__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   gap: 30px;
 }
 
@@ -477,9 +565,6 @@ img {
 }
 
 .firms__list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -538,9 +623,6 @@ img {
   background: #2F303A;
 }
 .footer__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-align: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
@@ -622,9 +704,6 @@ img {
 }
 
 .mail-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   margin-left: auto;
 }
 .mail-wrapper__footer {
