--- a/sass/base/_base-classes.scss
+++ b/sass/base/_base-classes.scss
@@ -15,18 +15,18 @@
     color: $accent-color;
 }
 
-.header__link--current::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
+// .header__link--current::after {
+//     content: '';
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 4px;
 
-    border-radius: 2px;
+//     border-radius: 2px;
 
-    background-color: $accent-color;
-}
+//     background-color: $accent-color;
+// }
 
 body {
     margin: 0;
@@ -37,10 +37,23 @@ body {
 }
 
 .container {
-    width: 1200px;
-    margin: 0 auto;
+    // margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+
+    @media screen and (min-width: 480px) {
+        width: 480px;
+        margin: 0 auto;
+
+    }
+
+    @media screen and (max-width: 480px) {
+        margin-left: auto;
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 768px;
+    }
 }
 
 .section {
@@ -81,6 +94,7 @@ body {
 
 .link {
     text-decoration: none;
+    color: $secondary-title-text;
 }
 
 .icon {
