--- a/sass/components/index/_firms.scss
+++ b/sass/components/index/_firms.scss
@@ -1,5 +1,5 @@
 .firms__list {
-    display: flex;
+    // display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 30px;
