--- a/sass/components/index/_page-header.scss
+++ b/sass/components/index/_page-header.scss
@@ -1,17 +1,127 @@
 .header {
     position: fixed;
     width: 100%;
+    height: 60px;
     top: 0;
     left: 0;
     z-index: 2;
+
+    display: flex;
+    align-items: center;
 
     background-color: $color-white;
     border-bottom: 1px solid #ECECEC;
 
     &__wrapper {
-        display: flex;
-        align-items: center;
+        // display: none;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        min-height: 100vw;
+
+        padding: 40px 48px 48px;
+
+        background-color: #fff;
+
     }
+
+    @media screen and (max-width: 480px) {
+        &__wrapper {
+            margin-left: auto;
+
+        }
+
+        .header__logo {
+            // display: flex;
+            // justify-content:center;
+        }
+    }
+
+}
+
+.header__mobile {
+    display: flex;
+    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
+
+    
+}
+
+.mobile-btn {
+    z-index: 3;
+
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    margin: 0;
+
+    background-color: transparent;
+    border: none;
+
+    & .icon-close {
+        display: none;
+    }
+
+    &.is-open .icon-close {
+        display: block;
+    }
+
+    &.is-open .icon-menu {
+        display: none;
+    }
+
+    &.is-open .header__logo {
+        display: none;
+    }
+}
+
+// Social header links
+
+.header-social__list {
+    display: flex;
+    // justify-content: space-between;
+    // gap: 20px;
+
+    color: $accent-color;
+
+
+    .header-social__item {
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 1.22;
+
+        letter-spacing: 0.02em; 
+        
+        &:not(:last-child) {
+            margin-right: 20px;
+        }
+
+        &:not(:last-child):after {
+            content: '';
+            position: absolute;
+            margin-left: 10px;
+            width: 20px;
+            height: 12px;
+            border-bottom: 1px solid rgba(33, 33, 33, 0.2);
+            transform: rotate(90deg);
+        }
+
+    }
+}
+
+.header-social-link {
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22;
+    letter-spacing: .02em;
+
+    color: $accent-color;
 
 }
 
@@ -19,12 +129,15 @@
 .header__nav {
     display: flex;
     align-items: center;
+    gap: 30px;
 
+    margin-bottom: 302px;
 }
 
 .header__list {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    gap: 32px;
 }
 
 .header__item {
@@ -37,15 +150,21 @@
 }
 
 .header__link {
-    display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    // display: block;
+    // padding-top: 32px;
+    // padding-bottom: 32px;
 
-    color: $secondary-title-text;
+    // color: $secondary-title-text;
+
+    // font-weight: 500;
+    // font-size: 14px;
+    // line-height: 1.14;
+    // letter-spacing: 0.02em;
 
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 40px;
+    line-height: 1.175;
+    text-align: start;
     letter-spacing: 0.02em;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -55,10 +174,27 @@
         color: $accent-color;
         outline: $accent-color;
     }
+
+    @media screen and (max-width: 480px) {
+
+    }
 }
 
 .header__link--current {
     color: $accent-color;
+
+    // &::after {
+    //     content: '';
+    //     position: absolute;
+    //     bottom: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 4px;
+    
+    //     border-radius: 2px;
+    
+    //     background-color: $accent-color;
+    // }
 }
 
 /* Телефон имейл */
