--- a/sass/components/index/_page-header.scss
+++ b/sass/components/index/_page-header.scss
@@ -82,14 +82,16 @@
 
 .header-social__list {
     display: flex;
+    position: relative;
+    gap: 10px;
     // justify-content: space-between;
-    // gap: 20px;
+    gap: 20px;
 
     color: $accent-color;
 
 
     .header-social__item {
-        display: flex;
+        display: inline;
         justify-content: space-between;
         position: relative;
         font-weight: 500;
@@ -99,29 +101,32 @@
         letter-spacing: 0.02em; 
         
         &:not(:last-child) {
-            margin-right: 20px;
+            // margin-right: 20px;
         }
 
-        &:not(:last-child):after {
+        &:not(:last-child)::after {
             content: '';
             position: absolute;
-            margin-left: 10px;
-            width: 20px;
-            height: 12px;
-            border-bottom: 1px solid rgba(33, 33, 33, 0.2);
-            transform: rotate(90deg);
+            top: 0;
+            right: -10px;
+            width: 1px;
+            height: 22px;
+            border-right: 1px solid rgba(33, 33, 33, 0.2);
         }
 
     }
 }
 
 .header-social-link {
+    position: relative;
+    display: inline-block;
     font-weight: 500;
     font-size: 18px;
     line-height: 1.22;
     letter-spacing: .02em;
 
     color: $accent-color;
+    
 
 }
 
