done with header and mobile menu

--- a/sass/components/index/_modal.scss
+++ b/sass/components/index/_modal.scss
@@ -1,5 +1,5 @@
 .form__wrapper {
-    width: 448px;
+    // width: 28rem;
     margin: 0 auto;
 }
 
@@ -95,7 +95,7 @@
     align-items: center;
     gap: 2px;
 
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.5;
     letter-spacing: 0.03em;
 
