--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@
 .header__logo,
 .footer__logo {
   display: inline-block;
-  margin-right: 94px;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -48,7 +47,7 @@ body {
 }
 @media screen and (max-width: 480px) {
   .container {
-    margin-left: auto;
+    max-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -225,6 +224,7 @@ img {
   border-bottom: 1px solid #ECECEC;
 }
 .header__wrapper {
+  display: none;
   position: absolute;
   top: 0;
   left: 0;
@@ -233,23 +233,35 @@ img {
   padding: 40px 48px 48px;
   background-color: #fff;
 }
-@media screen and (max-width: 480px) {
-  .header__wrapper {
-    margin-left: auto;
-  }
+.header__wrapper.is-open {
+  display: block;
 }
 
 .header__mobile {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 10px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  width: 100%;
+}
+@media screen and (max-width: 480px) {
+  .header__mobile {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    width: 100%;
+  }
 }
 
 .mobile-btn {
@@ -272,6 +284,15 @@ img {
 }
 .mobile-btn.is-open .header__logo {
   display: none;
+}
+@media screen and (max-width: 479px) {
+  .mobile-btn {
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
 }
 
 .header-social__list {
@@ -357,6 +378,7 @@ img {
   color: #2196F3;
   outline: #2196F3;
 }
+
 .header__link--current {
   color: #2196F3;
 }
@@ -480,6 +502,11 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
+}
+@media screen and (max-width: 480px) {
+  .significant__title {
+    text-align: center;
+  }
 }
 
 .significant__subtxt {
@@ -797,7 +824,6 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  min-width: 528px;
   min-height: 581px;
   padding: 40px 40px;
   background-color: #ffffff;
@@ -808,6 +834,11 @@ img {
           transform: translate(-50%, -50%) scale(1);
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (max-width: 768px) {
+  .backdrop__modal--is-hidden {
+    width: 450px;
+  }
 }
 
 .backdrop__btn {
@@ -838,7 +869,6 @@ img {
 }
 
 .form__wrapper {
-  width: 448px;
   margin: 0 auto;
 }
 
@@ -937,7 +967,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   gap: 2px;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.03em;
   margin-bottom: 30px;
