--- a/sass/base/_base-classes.scss
+++ b/sass/base/_base-classes.scss
@@ -48,7 +48,8 @@ body {
     }
 
     @media screen and (max-width: 480px) {
-        margin-left: auto;
+        max-width: 480px;
+
     }
 
     @media screen and (min-width: 768px) {
