--- a/sass/components/index/_backdrop.scss
+++ b/sass/components/index/_backdrop.scss
@@ -39,7 +39,7 @@
     top: 50%;
     left: 50%;
 
-    min-width: 528px;
+    // min-width: 528px;
     min-height: 581px;
     padding: 40px 40px;
     
@@ -49,6 +49,11 @@
 
     transform: translate(-50%, -50%) scale(1);
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (max-width: 768px) {
+        width: 450px;
+        
+    }
 }
 
 .backdrop__btn {
