--- a/sass/components/index/_significant.scss
+++ b/sass/components/index/_significant.scss
@@ -26,6 +26,10 @@
     text-transform: uppercase;
 
     color: $secondary-title-text;
+
+    @media screen and (max-width: 480px) {
+        text-align: center;
+    }
 }
 
 .significant__subtxt {
