--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -5,7 +5,7 @@
 
 %logo {
     display: inline-block;
-    margin-right: 94px;
+    // margin-right: 94px;
 
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
