--- a/css/main.css
+++ b/css/main.css
@@ -59,6 +59,11 @@ body {
 .section {
   padding: 94px 0;
 }
+@media screen and (max-width: 768px) {
+  .section {
+    padding: 60px 0;
+  }
+}
 
 .section__title {
   margin: 0;
@@ -70,6 +75,16 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
 }
+@media screen and (max-width: 768px) {
+  .section__title {
+    margin-bottom: 30px;
+    font-size: 28px;
+    line-height: 1.17;
+    /* identical to box height */
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
+}
 
 .input {
   padding: 10px 0;
@@ -80,9 +95,8 @@ body {
 }
 
 .portfolio {
-  padding: 94px 0;
+  padding: 60px 0;
 }
-
 .list {
   padding: 0;
   margin: 0;
@@ -440,9 +454,10 @@ img {
 .section-made {
   padding-top: 0;
 }
-
-.made__list {
-  gap: 30px;
+@media screen and (max-width: 768px) {
+  .section-made {
+    display: none;
+  }
 }
 
 .made__item {
@@ -492,6 +507,11 @@ img {
   -ms-flex-preferred-size: calc(100% - 22.5px);
       flex-basis: calc(100% - 22.5px);
 }
+@media screen and (max-width: 480px) {
+  .significant__list:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
 
 .significant__title {
   margin: 0;
@@ -503,7 +523,7 @@ img {
   text-transform: uppercase;
   color: #212121;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .significant__title {
     text-align: center;
   }
@@ -529,6 +549,11 @@ img {
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background: #ffffff;
+}
+@media screen and (max-width: 768px) {
+  .team__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .team__img {
@@ -565,6 +590,17 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+@media screen and (max-width: 768px) {
+  .team-social__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 10px;
+  }
+}
 
 .social-link {
   display: -webkit-box;
@@ -591,6 +627,9 @@ img {
 }
 
 .firms__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -612,6 +651,16 @@ img {
   cursor: pointer;
   color: #2196F3;
   outline: #2196F3;
+}
+@media screen and (max-width: 480px) {
+  .firms__item {
+    -ms-flex-preferred-size: calc(50% - 15px);
+        flex-basis: calc(50% - 15px);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    gap: 15px;
+  }
 }
 
 .firms__link {
@@ -648,10 +697,10 @@ img {
   padding-top: 60px;
   background: #2F303A;
 }
-.footer__wrapper {
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
+@media screen and (max-width: 768px) {
+  .footer__wrapper {
+    text-align: center;
+  }
 }
 .footer__list {
   font-style: normal;
@@ -659,10 +708,13 @@ img {
   line-height: 1.5;
   letter-spacing: 0.03em;
 }
+@media screen and (max-width: 480px) {
+  .footer__adress {
+    margin-bottom: 60px;
+  }
+}
 
 .footer__logo {
-  margin: 0;
-  margin-right: 94px;
   margin-bottom: 20px;
   color: #ffffff;
 }
@@ -697,6 +749,7 @@ img {
   display: -ms-inline-flexbox;
   display: inline-flex;
   gap: 10px;
+  margin: 0 auto;
 }
 
 .join-footer {
@@ -707,7 +760,11 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-left: 70px;
+}
+@media screen and (max-width: 768px) {
+  .join-footer {
+    margin-bottom: 60px;
+  }
 }
 
 .join-footer__title,
@@ -720,6 +777,12 @@ img {
   text-transform: uppercase;
   color: #ffffff;
 }
+@media screen and (max-width: 768px) {
+  .join-footer__title,
+.mail-wrapper__title {
+    margin-bottom: 20px;
+  }
+}
 
 .join-footer__link {
   background: rgba(255, 255, 255, 0.1);
@@ -729,17 +792,11 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mail-wrapper {
-  margin-left: auto;
-}
-.mail-wrapper__footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+@media screen and (max-width: 768px) {
+  .mail-wrapper__title {
+    display: inline-block;
+    margin-bottom: 20px;
+  }
 }
 .mail-wrapper__input {
   width: 358px;
@@ -750,6 +807,12 @@ img {
   border-radius: 4px;
   background: #2F303A;
   color: #ffffff;
+}
+@media screen and (max-width: 768px) {
+  .mail-wrapper__input {
+    width: 100%;
+    margin-bottom: 20px;
+  }
 }
 
 .mail-wrapper__btn {
@@ -788,6 +851,11 @@ img {
   background-color: #188CE8;
   cursor: pointer;
   outline: #2196F3;
+}
+@media screen and (max-width: 768px) {
+  .mail-wrapper__btn {
+    margin: 0 auto;
+  }
 }
 
 .backdrop {
@@ -1062,6 +1130,8 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -1093,22 +1163,13 @@ img {
   outline: #2196F3;
 }
 
-.portfolio__list {
-  margin-top: -30px;
-  margin-left: -30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
 .portfolio__item {
-  margin-top: 30px;
-  margin-left: 30px;
-  -ms-flex-preferred-size: calc(33.3333333333% - 30px);
-      flex-basis: calc(33.3333333333% - 30px);
   background: #ffffff;
+}
+@media screen and (max-width: 768px) {
+  .portfolio__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .portfolio__content {
