--- a/sass/components/index/_firms.scss
+++ b/sass/components/index/_firms.scss
@@ -1,5 +1,5 @@
 .firms__list {
-    // display: flex;
+    display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 30px;
@@ -20,6 +20,14 @@
         cursor: pointer;
         color: $accent-color;
         outline: $accent-color;
+    }
+
+    & {
+        @media screen and (max-width: 480px) {
+            flex-basis: calc(50% - 15px);
+            justify-content: center;
+            gap: 15px;
+        }
     }
 }
 
@@ -49,4 +57,6 @@
         color: $accent-color;
         outline: $accent-color;
     }
+
+    
 }
