--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,28 @@ body {
   .container {
     width: 768px;
   }
+  .container__header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+.container__header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .section {
@@ -154,26 +176,23 @@ img {
   outline: #2196F3;
 }
 
-.adress__nav {
-  color: #757575;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap-reverse;
-      flex-wrap: wrap-reverse;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: reverse;
-      -ms-flex-direction: column-reverse;
-          flex-direction: column-reverse;
-  font-weight: 500;
-  font-size: 34px;
-  line-height: 1.17;
-  letter-spacing: 0.02em;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .adress__nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap-reverse;
+        flex-wrap: wrap-reverse;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #2196F3;
   }
   .adress__nav .adress__icon-post {
@@ -181,6 +200,33 @@ img {
   }
   .adress__nav .adress__icon-phone {
     display: none;
+  }
+}
+@media screen and (min-width: 768px) {
+  .adress__nav {
+    color: #757575;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    gap: 10px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .adress__icon {
+    margin-right: 10px;
+    vertical-align: middle;
+    fill: currentColor;
   }
 }
 
@@ -194,18 +240,28 @@ img {
   height: 16px;
 }
 
-.adress__item a[href^=tel] {
-  display: inline-block;
-  color: #2196F3;
-  margin-bottom: 32px;
+@media screen and (max-width: 767px) {
+  .adress__item a[href^=tel] {
+    display: inline-block;
+    color: #2196F3;
+    margin-bottom: 32px;
+  }
+  .adress__item a[href^=mail] {
+    display: inline-block;
+    margin-bottom: 64px;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+  }
 }
-.adress__item a[href^=mail] {
-  display: inline-block;
-  margin-bottom: 64px;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 1.16;
-  letter-spacing: 0.02em;
+@media screen and (min-width: 768px) {
+  .adress__item {
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.02em;
+  }
 }
 
 .adress__link {
@@ -224,57 +280,53 @@ img {
 .header {
   position: fixed;
   width: 100%;
-  height: 60px;
   top: 0;
   left: 0;
   z-index: 2;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   background-color: #ffffff;
   border-bottom: 1px solid #ECECEC;
 }
-.header__wrapper {
-  display: none;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  min-height: 100vw;
-  padding: 40px 48px 48px;
-  background-color: #fff;
+@media screen and (max-width: 767px) {
+  .header {
+    height: 60px;
+  }
+  .header__wrapper {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100vw;
+    padding: 40px 48px 48px;
+    background-color: #fff;
+  }
+  .header__wrapper.is-open {
+    display: block;
+  }
+  .header__logo {
+    position: absolute;
+    top: 55%;
+    left: 15px;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
 }
-.header__wrapper.is-open {
-  display: block;
-}
-
-.header__mobile {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-}
-@media screen and (max-width: 480px) {
-  .header__mobile {
+@media screen and (min-width: 768px) {
+  .header__wrapper {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    width: 100%;
+  }
+  .header__logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 
@@ -299,14 +351,28 @@ img {
 .mobile-btn.is-open .header__logo {
   display: none;
 }
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 767px) {
   .mobile-btn {
     position: absolute;
-    top: 50%;
+    top: 55%;
     right: 15px;
     -webkit-transform: translateY(-50%);
             transform: translateY(-50%);
   }
+}
+@media screen and (min-width: 768px) {
+  .mobile-btn {
+    display: none;
+  }
+}
+.mobile-btn:hover .icon-close, .mobile-btn:focus .icon-close, .mobile-btn:hover .icon-menu, .mobile-btn:focus .icon-menu {
+  fill: #2196F3;
+}
+
+.icon-close,
+.icon-menu {
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-social__list {
@@ -338,6 +404,11 @@ img {
   height: 22px;
   border-right: 1px solid rgba(33, 33, 33, 0.2);
 }
+@media screen and (min-width: 768px) {
+  .header-social__list {
+    display: none;
+  }
+}
 
 .header-social-link {
   position: relative;
@@ -356,45 +427,106 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: 30px;
-  margin-bottom: 302px;
+}
+@media screen and (max-width: 767px) {
+  .header__nav {
+    margin-bottom: 302px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .header__nav {
+    margin-right: 96px;
+  }
 }
 
 .header__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 32px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .header__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
 }
 
-.header__item {
-  position: relative;
+@media screen and (max-width: 767px) {
+  .header__item {
+    position: relative;
+  }
+  .header__item:not(:last-child) {
+    font-weight: 500;
+    margin-right: 50px;
+    margin-bottom: 32px;
+  }
 }
-.header__item:not(:last-child) {
-  font-weight: 500;
-  margin-right: 50px;
+@media screen and (min-width: 768px) {
+  .header__item {
+    position: relative;
+  }
+  .header__item:not(:last-child) {
+    font-weight: 500;
+    margin-right: 50px;
+  }
 }
 
-.header__link {
-  font-weight: 500;
-  font-size: 40px;
-  line-height: 1.175;
-  text-align: start;
-  letter-spacing: 0.02em;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (max-width: 767px) {
+  .header__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.175;
+    text-align: start;
+    letter-spacing: 0.02em;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__link:hover, .header__link:focus {
+    color: #2196F3;
+    outline: #2196F3;
+  }
 }
-.header__link:hover, .header__link:focus {
-  color: #2196F3;
-  outline: #2196F3;
+@media screen and (min-width: 768px) {
+  .header__link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: #212121;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header__link:hover, .header__link:focus {
+    color: #2196F3;
+    outline: #2196F3;
+  }
 }
 
 .header__link--current {
   color: #2196F3;
+}
+@media screen and (min-width: 768px) {
+  .header__link--current::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #2196F3;
+  }
 }
 
 /* Телефон имейл */
@@ -697,7 +829,7 @@ img {
   padding-top: 60px;
   background: #2F303A;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__wrapper {
     text-align: center;
   }
@@ -708,7 +840,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.03em;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .footer__adress {
     margin-bottom: 60px;
   }
@@ -761,7 +893,7 @@ img {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .join-footer {
     margin-bottom: 60px;
   }
@@ -777,7 +909,7 @@ img {
   text-transform: uppercase;
   color: #ffffff;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .join-footer__title,
 .mail-wrapper__title {
     margin-bottom: 20px;
@@ -792,7 +924,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .mail-wrapper__title {
     display: inline-block;
     margin-bottom: 20px;
@@ -808,7 +940,7 @@ img {
   background: #2F303A;
   color: #ffffff;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .mail-wrapper__input {
     width: 100%;
     margin-bottom: 20px;
