--- a/sass/components/index/_address.scss
+++ b/sass/components/index/_address.scss
@@ -1,30 +1,18 @@
 .adress__nav {
-    color: $primary-text-color;
-    // display: flex;
-    // margin-left: auto;
-    // padding-top: 32px;
-    // padding-bottom: 32px;
 
-    // font-weight: 500;
-    // font-size: 14px;
-    // line-height: 1.14;
-    // letter-spacing: 0.02em;
+    @media screen and (max-width: 767px) {
 
-    display: flex;
-    flex-wrap: wrap-reverse;
-    flex-direction: column-reverse;
-    font-weight: 500;
-    font-size: 34px;
-    line-height: 1.17;
-
-
-    letter-spacing: 0.02em;
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    @media screen and (max-width: 768px) {
-
-
+        display: flex;
+        flex-wrap: wrap-reverse;
+        flex-direction: column-reverse;
+        font-weight: 500;
+        font-size: 34px;
+        line-height: 1.17;
+    
+    
+        letter-spacing: 0.02em;
+    
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         color: $accent-color;
 
         .adress__icon-post {
@@ -33,16 +21,39 @@
         
         .adress__icon-phone {
             display: none;
-
         }
     }
+
+    @media screen and (min-width: 768px) {
+
+        color: $primary-text-color;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        // margin-left: auto;
+        // padding-top: 32px;
+        // padding-bottom: 32px;
+    
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+
+         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    }
+
+
 }
 
-// .adress__icon {
-//     margin-right: 10px;
-//     vertical-align: middle;
-//     fill: currentColor;
-// }
+.adress__icon {
+    @media screen and (min-width: 768px) {
+        margin-right: 10px;
+        vertical-align: middle;
+        fill: currentColor;
+    }
+    
+}
 
 .adress__icon-post {
     height: 12px;
@@ -59,23 +70,38 @@
 // }
 
 .adress__item {
-    a[href^="tel"] {
-        display: inline-block;
-        color: $accent-color;
-        margin-bottom: 32px;
-    }
+        @media screen and (max-width: 767px) {
+            a[href^="tel"] {
+                display: inline-block;
+                color: $accent-color;
+                margin-bottom: 32px;
+            }
+        
+            a[href^="mail"] {
+                display: inline-block;
+                margin-bottom: 64px;
+        
+                font-weight: 500;
+                font-size: 24px;
+                line-height: 1.16;
+                letter-spacing: 0.02em
+            }
+        }
 
-    a[href^="mail"] {
-        display: inline-block;
-        margin-bottom: 64px;
+        @media screen and (min-width: 768px) {
+            // &:not(:first-child) {
+            //     margin-left: 50px;
+            // }
 
-        font-weight: 500;
-        font-size: 24px;
-        line-height: 1.16;
-        letter-spacing: 0.02em
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 1.16;
+
+            letter-spacing: 0.02em;
+        }
     }
+ 
     
-}
 
 .adress__link {
     color: $primary-text-color;
