--- a/sass/components/index/_page-header.scss
+++ b/sass/components/index/_page-header.scss
@@ -1,65 +1,69 @@
 .header {
     position: fixed;
     width: 100%;
-    height: 60px;
     top: 0;
     left: 0;
     z-index: 2;
 
-    display: flex;
-    align-items: center;
-    // justify-content:center;
-
     background-color: $color-white;
     border-bottom: 1px solid #ECECEC;
 
-    &__wrapper {
-        display: none;
+    
+    @media screen and (max-width: 767px) {
+        & {
+            height: 60px;
+        }
 
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        min-height: 100vw;
+        &__wrapper {
+            display: none;
 
-        padding: 40px 48px 48px;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            min-height: 100vw;
+    
+            padding: 40px 48px 48px;
+    
+            background-color: #fff;
+        }
 
-        background-color: #fff;
+        &__wrapper.is-open {
+            display: block;
+        }
 
+        &__logo {
+            position: absolute;
+            top: 55%;
+            left: 15px;
+            transform: translateY(-50%);
+        }
+
+        // &__mobile {
+        //     display: flex;
+        //     // gap: 10px;
+        //     justify-content: space-between;
+        //     align-items: center;
+        //     width: 100%;
+        // }
     }
 
-    &__wrapper.is-open {
-        display: block;
+    @media screen and (min-width: 768px) {
+
+        &__wrapper {
+            display: flex;
+            align-items: center;
+        }
+
+        &__logo {
+            display: flex;
+            align-items: center;
+        }
+      
     }
-
-    // @media screen and (min-width: 480px) {
-    //     &__wrapper {
-    //         // margin-left: auto;
-
-    //     }
-
-    //     .header__logo {
-    //         // display: flex;
-    //         // justify-content:center;
-    //     }
-    // }
 
 }
 
-.header__mobile {
-    display: flex;
-    // gap: 10px;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
- @media screen and (max-width: 480px) {
-    display: flex;
-    // gap: 10px;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
- }
-}
 
 .mobile-btn {
     z-index: 3;
@@ -88,12 +92,29 @@
         display: none;
     }
 
-    @media screen and (max-width: 479px) {
+    @media screen and (max-width: 767px) {
         position: absolute;
-        top: 50%;
+        top: 55%;
         right: 15px;
         transform: translateY(-50%);
     }
+
+    @media screen and (min-width: 768px) {
+      display: none;
+    }
+
+    &:hover .icon-close,
+    &:focus .icon-close, 
+    &:hover .icon-menu, 
+    &:focus .icon-menu {
+        fill: $accent-color;
+
+    }
+}
+
+.icon-close, 
+.icon-menu {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 // Social header links
@@ -133,6 +154,10 @@
         }
 
     }
+
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
 }
 
 .header-social-link {
@@ -149,70 +174,108 @@
 .header__nav {
     display: flex;
     align-items: center;
-    gap: 30px;
+   
+    @media screen and (max-width: 767px) {
+        margin-bottom: 302px;
+    }
 
-    margin-bottom: 302px;
+    @media screen and (min-width: 768px) {
+        margin-right: 96px;
+    }
 }
 
 .header__list {
     display: flex;
-    flex-direction: column;
-    gap: 32px;
+    align-items: center;
+   
+
+    @media screen and (max-width: 767px) {
+        flex-direction: column;
+        align-items: baseline;
+    }
 }
 
 .header__item {
-    position: relative;
+    @media screen and (max-width: 767px) {
+        position: relative;
 
-    &:not(:last-child) {
-        font-weight: 500;
-        margin-right: 50px;
+        &:not(:last-child) {
+            font-weight: 500;
+            margin-right: 50px;
+            margin-bottom: 32px;
+        }
+    }
+
+    @media screen and (min-width: 768px) {
+        position: relative;
+
+        &:not(:last-child) {
+            font-weight: 500;
+            margin-right: 50px;
+        }
     }
 }
 
 .header__link {
-    // display: block;
-    // padding-top: 32px;
-    // padding-bottom: 32px;
 
-    // color: $secondary-title-text;
+    @media screen and (max-width: 767px) {
+        font-weight: 500;
+        font-size: 40px;
+        line-height: 1.175;
+        text-align: start;
+        letter-spacing: 0.02em;
+    
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+        &:hover,
+        &:focus {
+            color: $accent-color;
+            outline: $accent-color;
+        }
 
-    // font-weight: 500;
-    // font-size: 14px;
-    // line-height: 1.14;
-    // letter-spacing: 0.02em;
-
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 1.175;
-    text-align: start;
-    letter-spacing: 0.02em;
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-        color: $accent-color;
-        outline: $accent-color;
+       
     }
 
+    @media screen and (min-width: 768px) {
+        display: block;
+        padding-top: 32px;
+        padding-bottom: 32px;
 
+        color: $secondary-title-text;
+
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        &:hover,
+        &:focus {
+            color: $accent-color;
+            outline: $accent-color;
+        }
+    }
 }
 
 .header__link--current {
     color: $accent-color;
 
-    // &::after {
-    //     content: '';
-    //     position: absolute;
-    //     bottom: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 4px;
-    
-    //     border-radius: 2px;
-    
-    //     background-color: $accent-color;
-    // }
+
+    @media screen and (min-width: 768px) {
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+        
+            border-radius: 2px;
+        
+            background-color: $accent-color;
+        }
+    }
 }
 
 /* Телефон имейл */
