--- a/css/main.css
+++ b/css/main.css
@@ -559,6 +559,26 @@ img {
   text-transform: uppercase;
   color: #ffffff;
 }
+@media screen and (min-width: 768px) {
+  .hero__title {
+    max-width: 360px;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.62;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  }
+}
+@media screen and (max-width: 767px) {
+  .hero__title {
+    max-width: 360px;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.61;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+  }
+}
 
 .hero__btn {
   display: inline-block;
@@ -623,6 +643,17 @@ img {
   color: #ffffff;
 }
 
+@media screen and (min-width: 768px) {
+  .significant {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
+}
+
 .significant__thumb {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -635,13 +666,15 @@ img {
   height: 120px;
 }
 
-.significant__list {
-  -ms-flex-preferred-size: calc(100% - 22.5px);
-      flex-basis: calc(100% - 22.5px);
-}
 @media screen and (max-width: 480px) {
   .significant__list:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .significant__list {
+    -ms-flex-preferred-size: calc(50% - 15px);
+        flex-basis: calc(50% - 15px);
   }
 }
 
@@ -655,7 +688,7 @@ img {
   text-transform: uppercase;
   color: #212121;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .significant__title {
     text-align: center;
   }
@@ -675,6 +708,15 @@ img {
 .team__list {
   gap: 30px;
 }
+@media screen and (min-width: 768px) {
+  .team__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
 
 .team__item {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -682,9 +724,15 @@ img {
   border-radius: 0px 0px 4px 4px;
   background: #ffffff;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .team__item:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .team__item {
+    -ms-flex-preferred-size: calc(50% - 15px);
+        flex-basis: calc(50% - 15px);
   }
 }
 
@@ -794,6 +842,12 @@ img {
     gap: 15px;
   }
 }
+@media screen and (min-width: 768px) {
+  .firms__item {
+    -ms-flex-preferred-size: calc(33.3333333333% - 20px);
+        flex-basis: calc(33.3333333333% - 20px);
+  }
+}
 
 .firms__link {
   display: -webkit-box;
@@ -834,6 +888,19 @@ img {
     text-align: center;
   }
 }
+@media screen and (min-width: 768px) {
+  .footer__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    text-align: center;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
 .footer__list {
   font-style: normal;
   font-size: 14px;
@@ -843,6 +910,11 @@ img {
 @media screen and (max-width: 767px) {
   .footer__adress {
     margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .footer__adress {
+    margin-left: 76px;
   }
 }
 
@@ -898,6 +970,11 @@ img {
     margin-bottom: 60px;
   }
 }
+@media screen and (min-width: 768px) {
+  .join-footer {
+    margin-left: 162px;
+  }
+}
 
 .join-footer__title,
 .mail-wrapper__title {
@@ -924,7 +1001,25 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
+  .mail-wrapper {
+    margin-left: 166px;
+    margin-top: 60px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .mail-wrapper__footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 1200px) {
   .mail-wrapper__title {
     display: inline-block;
     margin-bottom: 20px;
@@ -1295,12 +1390,29 @@ img {
   outline: #2196F3;
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 .portfolio__item {
   background: #ffffff;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .portfolio__item:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .portfolio__item {
+    -ms-flex-preferred-size: calc(50% - 60px);
+        flex-basis: calc(50% - 60px);
+    max-width: 370px;
   }
 }
 
