--- a/sass/components/index/_firms.scss
+++ b/sass/components/index/_firms.scss
@@ -22,13 +22,18 @@
         outline: $accent-color;
     }
 
-    & {
-        @media screen and (max-width: 480px) {
-            flex-basis: calc(50% - 15px);
-            justify-content: center;
-            gap: 15px;
-        }
+    
+     @media screen and (max-width: 480px) {
+        flex-basis: calc(50% - 15px);
+        justify-content: center;
+        gap: 15px;
     }
+
+    @media screen and (min-width: 768px) {
+        flex-basis: calc(100% / 3 - 20px);
+
+    }
+    
 }
 
 .firms__link {
