--- a/sass/components/index/_significant.scss
+++ b/sass/components/index/_significant.scss
@@ -1,6 +1,12 @@
 .significant {
     // display: flex;
     // gap: 30px;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+}
 }
 
 .significant__thumb {
@@ -9,16 +15,29 @@
     justify-content: center;
     margin-bottom: 30px;
     height: 120px;
+
+    // @media screen and (min-width: 768px) {
+    //     flex-basis: calc(100% / 2  - 30px);
+        
+    // }
 }
 
 .significant__list {
-    flex-basis: calc(100% - 90px / 4);
+    // flex-basis: calc(100% - 90px / 4);
 
     &:not(:last-child) {
         @media screen and (max-width: 480px) {
             margin-bottom: 30px;
         }
     }
+
+    
+    @media screen and (min-width: 768px) {
+        flex-basis: calc(100% / 2  - 15px);
+            
+    }
+    
+   
 }
 
 .significant__title {
@@ -33,7 +52,7 @@
 
     color: $secondary-title-text;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
         text-align: center;
     }
 }
