--- a/sass/components/portfolio/_cards-list.scss
+++ b/sass/components/portfolio/_cards-list.scss
@@ -5,7 +5,10 @@
     // display: flex;
     // flex-wrap: wrap;
 
-   
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 .portfolio__item {
@@ -16,10 +19,16 @@
 
     background: $color-white;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 767px) {
         &:not(:last-child) {
             margin-bottom: 30px;
         }
+    }
+
+    @media screen and (min-width: 768px) {
+        flex-basis: calc( 100% / 2 - 60px);
+        max-width: 370px;
+
     }
 }
 
